# basic-format-converter

./: CMakeLists.txt
src/: atom.cpp  atom.h  basic_format_converter.cpp  bond.h  cell.cpp  cell.h  frame.cpp  frame.h  globals.cpp  globals.h  properties.cpp  properties.h  pytigre.cpp  rw.cpp  rw.h  space_gourps.h  space_groups  trajectory.cpp  trajectory.h
src/math/: math.cpp  math.h
